Fixed not being able to enter form on mobile

--- a/client/src/components/WorkoutAdd.scss
+++ b/client/src/components/WorkoutAdd.scss
@@ -63,9 +63,9 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 100%;
-    width: 80%;
-    margin-top: 50%;
+    height: 90%;
+    width: 90%;
+    margin-top: 58%;
     text-align: center;
     align-items: center;
     background: -webkit-linear-gradient(45deg, $theme-green 20%, #b4faab 60%, $theme-green 85%);
